@@ -1,0 +1,37 @@
+////
+This file is generated! See scripts/docs_collector.py
+////
+
+[[metricbeat-module-logstash]]
+== logstash module
+
+This is the logstash module.
+
+
+
+[float]
+=== Example configuration
+
+The Logstash module supports the standard configuration options that are described
+in <<configuration-metricbeat>>. Here is an example configuration:
+
+[source,yaml]
+----
+metricbeat.modules:
+- module: logstash
+  metricsets: ["node"]
+  enabled: false
+  period: 10s
+  hosts: ["localhost"]
+
+----
+
+[float]
+=== Metricsets
+
+The following metricsets are available:
+
+* <<metricbeat-metricset-logstash-node,node>>
+
+include::logstash/node.asciidoc[]
+
