@@ -1,0 +1,6 @@
+- module: logstash
+  metricsets: ["node"]
+  enabled: false
+  period: 10s
+  hosts: ["localhost"]
+
